# CMakeDemoWIthSubProjects

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md
demo1/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt  main.cpp
demo3/: CMakeLists.txt  main.cpp
demo4/: CMakeLists.txt  Tile.h  TileFactory.h  main.cpp
demo5/: CMakeLists.txt  main.cpp
demo6/: CMakeLists.txt
space_trader/: CMakeLists.txt  bytecode.txt  main.cpp
